# hawebgen

./: README.md  StatiGen.cabal  StatiGen.hs
StatiGen/: Build.hs  Config.hs  Types.hs  Util.hs
templates/andreas00/: default.css  default.template
templates/andreas01/: default.css  default.template
templates/andreas08/: default.css  default.template
templates/default/: default.css  default.template
templates/emptyPage/: index.conf  index.page
